--- a/LDA_paper/document.tex
+++ b/LDA_paper/document.tex
@@ -293,24 +293,12 @@ be detected before the prediction error occurs.
     provides provable guarantees of correctness, while existing methods for detection of concept
     drift in distributed settings~\cite{AngGZPH13} rely on heuristics, utilizing error rate statistics.
 
-\noindent \textbf{Data Privacy:} One of the important aspects in distributed systems is privacy of the data,    namely, each node does not learn the data of other nodes.
+\noindent \textbf{Data Privacy:} Data privacy is important in distributed systems: no node should learn the data of other nodes.
 
 
-    For example, nodes correspond to different hospitals that are not allowed
-    to share patient information with each other, but want to perform
-    collaborative training to improve the global model (using a trusted third party).
-    Methods that analyse classification errors to detect the concept drift,
-    require knowledge of the global model. If the goal is to protect the
-    privacy of the data in local nodes from each other, then the information,
-    received by the local nodes should not reveal private information from other
-    nodes (either directly or indirectly by learning private information from the
-    parameters of the model).
-    In our method, we monitor the correctness of the global model without
-    revealing the model to the nodes. The global information that is required
-    for our algorithm is the global covariance matrix of the feature space
-    and the norm of the model. These are not enough to recover the global model,
-    as the global means of the classes are not presented to the local nodes
-    while LDA needs class means to compute the classification model.
+    One example might be nodes that correspond to different hospitals. The hospitals are not allowed to share patient information but want to perform collaborative training to improve the global model (using a trusted third party).
+    Methods that analyze classification errors to detect concept drift require knowledge of the global model. If the goal is to protect the privacy of the data in the local nodes, then the information received by those nodes should not reveal private information from other nodes (either directly or indirectly, by learning private information from the parameters of the model).
+    In our method, we monitor the correctness of the global model without revealing the model to the nodes. The global information required for our algorithm is the global covariance matrix of the feature space and the norm of the model. These are not enough to recover the global model, as the global means of the classes are not presented to the local nodes (as needed in LDA computation).
 
 
 
@@ -337,14 +325,6 @@ Monitoring dynamic data streams is a broad topic that has been addressed in diff
 
 Among methods for concept drift in classification are e.g., \cite{gama2004learning,baena2006early,klinkenberg2000detecting,dries2009adaptive,icml2014c2_harel14,AngGZPH13}. Some of these methods~\cite{gama2004learning,baena2006early,klinkenberg2000detecting} are based on analysis of classification errors, hence they detect the drift only after the model becomes inaccurate. Others \cite{klinkenberg2000detecting,dries2009adaptive} try to estimate the generalization error from the samples in the window to draw the conclusions on the change in the distribution. The models that are used in such analysis are not related to the prediction model at hand, and are dictated by either computation efficiency \cite{klinkenberg2000detecting} or by model capacity considerations (e.g. linear classier are less likely to overfit the data in a window)\cite{dries2009adaptive}. There is no guarantee that the generalization error of the prediction model has any relation to the one, used in detection of the concept drift. Thus, we link the detection method to the prediction model and learning algorithm (as in \cite{icml2014c2_harel14,AngGZPH13}).
 
-
-
-
-%Drift Detection Method (DDM) \cite{gama2004learning} is one of the most widely used algorithm and it analyses the sum of overall classification error and its empirical standard deviation to detect the concept drift.
-%The Early Drift Detection Method (EDDM) \cite{baena2006early} achieves better detection results than DDM if the data stream changes gradually. EDDM monitors the distance between the two classification errors.
-%Linear Four Rates (LFR) \cite{wang2015concept} uses as a statistic a linear combination of all history errors, with a decay parameter. The approach specified in \cite{klinkenberg2000detecting,dries2009adaptive} makes use of
-%the SVM error for detection. All these solutions are based on analysis of classification error, hence they detect the drift only after the model becomes inaccurate.
-
 In distributed settings, the problem of detecting a change in the data stream is referred to as {\em distributed monitoring}, and it is concerned with designing local tests for monitoring a function, defined globally over all the nodes in the system.
 In this work, we focus on monitoring a global classification model, namely LDA, over distributed data.
 We aim to define a constraint over the local data (at each node) that guarantees the validity of the global model. If a local data (in one or more nodes) does not meet the local condition, it leads to synchronization, i.e., the local data is collected to a central location from all the nodes and the model is recomputed.
@@ -357,15 +337,12 @@ monotonic \cite{michel2005klee} functions.
 For non-linear functions, examples include work on monitoring the value
 of a single-variable polynomial~\cite{shah2008handling},
 and eigenvalue perturbation~\cite{huang2007communication}.
-%A generic geometric approach for monitoring arbitrary functions was proposed
-%in~\cite{sharfman2007geometric}, and later extended and generalized
-%in~\cite{keren2012shape,lazerson2015monitoring}.
 
-A recently introduced work on monitoring Least Square
-Regression (LSR) ~\cite{gabel2015monitoring} is the closest to ours, but the problem in LDA is more complex in both theoretic and practical aspects.
-%but unlike the global scatter matrix (that is required by LSR) the global
-%covariance matrix (used in LDA) is not the mean of the
-%local covariance matrices, things that complicated the theoretical framework.
+A recently introduced work on monitoring Least Square 
+Regression (LSR) ~\cite{gabel2015monitoring} is the closest to ours, 
+but unlike the global scatter matrix (required by LSR) the global
+covariance matrix (required in LDA) is not the mean of the 
+local covariance matrices.
 
 
 \section{Theoretical Foundation}
@@ -410,12 +387,12 @@ classification \textit{model}.
 \subsection{Problem Definition}
 We denote $k$ as the number of nodes and
 $n$ as the number of samples in a node.
-Our model use discrete time (hereafter, rounds). Every node receives a new sample
+Our model uses discrete time (hereafter, rounds). Every node receives a new sample
 in a round.
 We use the \textit{sliding window} model where every node computes its current
-parameters from the last $W$ samples it saw.
+parameters from the last $W$ samples it was given.
 Every node keeps two sliding windows (one for each class) of length of $W/2$, as
-a node receive a new observation it replaces the oldest one from its class.
+a node receives a new observation it replaces the oldest one from its class.
 $x^i_j$ and $y^i_j$ are the $j$'th sample and label in the $i$'th node
 and $x_{old}^i(p)$ and $x_{old}^i(q)$ are the oldest samples from each class in
 the sliding window of the $i$'th node.
@@ -870,7 +847,7 @@ is distributed over 36 nodes) and we test both DLDA and PDLDA on it.
 The third (Gas Sensor Time Series Monitoring) is a big set(it is distributed over
 100 nodes). DLDA synchronization policy is too strict for a large number of nodes, hence we use this set only for PDLDA test.
 
-subsubsection{Message Preference Monitoring --- Usenet}
+\subsubsection{Message Preference Monitoring --- Usenet}
 The USENET dataset~\cite{usenet} is a text dataset that simulates a stream of messages from three newsgroups (medicine, space, baseball); the messages are presented sequentially to a user, who then labels them as interesting or junk, according to personal interest. Attribute values are binary, indicating the presence or absence of the 128 informative words. The drift occurs from a change in the user's
 preference (from space to baseball). Figure \ref{usenet} shows the results of
 DLDA algorithm with $W=450$ . The first 450 rounds over the data correspond to
@@ -882,17 +859,6 @@ and again is due only to the noise. In round 600 there is a concept
 drift.
 From this point both the DLDA and the true error increase until the
 synchronization in round 698.
-
-
-
-
-
-
-
-
-
-
-	
 \subsubsection{Power Consumption Monitoring}
 The Power Consumption dataset ~\cite{powerSupply} contains the hourly power supply of an
 Italian electric company as recorded from two sources: power, supplied
