--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -309,3 +309,50 @@ pages="264--269"
   pages     = {580--587},
   year      = {2014}
 }
+@inproceedings{Deva,
+  author    = {Bharath Hariharan and
+               Jitendra Malik and
+               Deva Ramanan},
+  title     = {Discriminative Decorrelation for Clustering and Classification},
+  booktitle = {Computer Vision - {ECCV} 2012 - 12th European Conference on Computer
+               Vision, Florence, Italy, October 7-13, 2012, Proceedings, Part {IV}},
+  pages     = {459--472},
+  year      = {2012}
+}
+@inproceedings{eSVM,
+  author    = {Tomasz Malisiewicz and
+               Abhinav Gupta and
+               Alexei A. Efros},
+  title     = {Ensemble of exemplar-SVMs for object detection and beyond},
+  booktitle = {{IEEE} International Conference on Computer Vision, {ICCV} 2011, Barcelona,
+               Spain, November 6-13, 2011},
+  pages     = {89--96},
+  year      = {2011}
+}
+
+
+@techreport{Tsymbal,
+    author = {Tsymbal, Alexey},
+   journal = {Informe t\'{e}cnico: TCD-CS-2004-15, Departament of Computer Science Trinity College, Dublin},
+    title = {The Problem of Concept Drift: Definitions and Related Work},
+    year = {2004}
+}
+@article{Gama2014,
+ author = {Gama, Jo\~{a}o and \v{Z}liobait\.{e}, Indr\.{e} and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
+ title = {A Survey on Concept Drift Adaptation},
+ journal = {ACM Comput. Surv.},
+ volume = {46},
+ number = {4},
+ year = {2014},
+ issn = {0360-0300},
+ pages = {44:1--44:37}
+}
+@article{AngGZPH13,
+  author = {Ang, Hock Hee and Gopalkrishnan, Vivekanand and Zliobaite, Indre and Pechenizkiy, Mykola and Hoi, Steven C. H.},
+  journal = {IEEE Trans. Knowl. Data Eng.},
+  number = 10,
+  pages = {2343-2355},
+  title = {Predictive Handling of Asynchronous Concept Drifts in Distributed Environments.},
+  volume = 25,
+  year = 2013
+}
