--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -37,14 +37,14 @@
 }
 
 @book{duda2012pattern,
-  title={Pattern classification},
+  title={Pattern Classification},
   author={Duda, Richard O and Hart, Peter E and Stork, David G},
   year={2012},
   publisher={John Wiley \& Sons}
 }
 
 @article{tahmasebi2010application,
-  title={Application of discriminant analysis for alteration separation; sungun copper deposit, East Azerbaijan, Iran},
+  title={Application of discriminant analysis for alteration separation; sungun copper deposit, {E}ast {A}zerbaijan, Iran},
   author={Tahmasebi, Pejman and Hezarkhani, Ardeshir and Mortazavi, Mojtaba},
   journal={Australian Journal of Basic and Applied Sciences},
   volume={6},
@@ -127,7 +127,7 @@
 @inproceedings{huang2007communication,
   title={Communication-efficient online detection of network-wide anomalies},
   author={Huang, Ling and Nguyen, XuanLong and Garofalakis, Minos and Hellerstein, Joseph M and Jordan, Michael and Joseph, Anthony D and Taft, Nina and others},
-  booktitle={INFOCOM 2007. 26th IEEE International Conference on Computer Communications  (INFOCOM)},
+  booktitle={26th IEEE International Conference on Computer Communications  (INFOCOM)},
   pages={134--142},
   year={2007},
 }
@@ -254,7 +254,7 @@
 }
 @book{ChenGupta2000,
 author = "Chen, J. and Gupta, A. K.",
-title = "Parametric statistical change point analysis",
+title = "Parametric Statistical change point analysis",
 publisher = "Birkhauser",
 year = "2000",
 }
@@ -270,7 +270,7 @@ year = "2000",
 @Inbook{Nishida2007,
 author="Nishida, K. Yamauchi, K.",
 chapter="Detecting Concept Drift Using Statistical Testing",
-title="Discovery Science: 10th International Conference, DS 2007 Sendai, Japan, October 1-4, 2007. Proceedings",
+title="Discovery Science: 10th International Conference. Proceedings",
 year="2007",
 publisher="Springer Berlin Heidelberg",
 pages="264--269"
@@ -281,8 +281,8 @@ pages="264--269"
                Jitendra Malik and
                Deva Ramanan},
   title     = {Discriminative Decorrelation for Clustering and Classification},
-  booktitle = {Computer Vision - {ECCV} 2012 - 12th European Conference on Computer
-               Vision, Florence, Italy, October 7-13, 2012, Proceedings, Part {IV}},
+  booktitle = {Computer Vision - {ECCV}  - 12th European Conference on Computer
+               Vision, Florence, Italy, October 7-13, Proceedings, Part {IV}},
   pages     = {459--472},
   year      = {2012}
 }
@@ -291,8 +291,8 @@ pages="264--269"
                Abhinav Gupta and
                Alexei A. Efros},
   title     = {Ensemble of exemplar-SVMs for object detection and beyond},
-  booktitle = {{IEEE} International Conference on Computer Vision, {ICCV} 2011, Barcelona,
-               Spain, November 6-13, 2011},
+  booktitle = {{IEEE} International Conference on Computer Vision - ({ICCV}), Barcelona,
+               Spain, November 6-13},
   pages     = {89--96},
   year      = {2011}
 }
@@ -304,8 +304,8 @@ pages="264--269"
                Jitendra Malik},
   title     = {Rich Feature Hierarchies for Accurate Object Detection and Semantic
                Segmentation},
-  booktitle = {2014 {IEEE} Conference on Computer Vision and Pattern Recognition,
-               {CVPR} 2014, Columbus, OH, USA, June 23-28, 2014},
+  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition,
+               ({CVPR}), Columbus, OH, USA, June 23-28, 2014},
   pages     = {580--587},
   year      = {2014}
 }
@@ -314,8 +314,8 @@ pages="264--269"
                Jitendra Malik and
                Deva Ramanan},
   title     = {Discriminative Decorrelation for Clustering and Classification},
-  booktitle = {Computer Vision - {ECCV} 2012 - 12th European Conference on Computer
-               Vision, Florence, Italy, October 7-13, 2012, Proceedings, Part {IV}},
+  booktitle = {The 12th European Conference on Computer
+               Vision ({ECCV}), Florence, Italy, October 7-13, 2012, Proceedings, Part {IV}},
   pages     = {459--472},
   year      = {2012}
 }
